--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-maps": "^1.20.1",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
