--- a/app.json
+++ b/app.json
@@ -18,7 +18,9 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "permissions": [],
+        "usesCleartextTraffic": true
       }
     },
     "web": {
