--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.13",
-    "@react-navigation/stack": "^7.0.18",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.9",
     "expo": "^52.0.18",
     "expo-font": "^13.0.1",
     "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "^0.76.5",
+    "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.20.1",
