--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "expo": "^52.0.18",
     "expo-font": "^13.0.1",
+    "expo-location": "~18.0.4",
     "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
@@ -26,8 +27,7 @@
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-location": "~18.0.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
