--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^21.6.1",
     "@react-navigation/native": "^7.0.13",
@@ -19,24 +20,24 @@
     "axios": "^1.7.9",
     "expo": "^52.0.18",
     "expo-firebase-recaptcha": "^2.3.1",
-    "expo-font": "^13.0.1",
+    "expo-font": "~13.0.1",
     "expo-location": "~18.0.4",
     "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "^0.76.5",
+    "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.20.1",
-    "react-native-reanimated": "^3.16.5",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.12.5"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
