--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/dynamic-links": "^21.6.1",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "^52.0.18",
     "expo-firebase-recaptcha": "^2.3.1",
@@ -34,7 +36,9 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
