--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/dynamic-links": "^21.6.1",
+    "@react-native-firebase/firestore": "^21.6.1",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
@@ -31,7 +32,7 @@
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "^1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
