Updte package.json

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-location": "~18.0.4",
     "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
+    "expo-updates": "^0.26.10",
     "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-native": "0.76.5",
@@ -39,8 +40,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
-    "expo-updates": "~0.26.10"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
