--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/stack": "^7.0.18",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "expo": "^52.0.18",
+    "expo": "^52.0.21",
     "expo-firebase-recaptcha": "^1.4.4",
     "expo-font": "~13.0.1",
     "expo-location": "~18.0.4",
@@ -29,15 +29,20 @@
     "expo-status-bar": "~2.0.0",
     "expo-updates": "^0.26.10",
     "firebase": "^11.0.2",
+    "install": "^0.13.0",
+    "npx": "^3.0.0",
+    "proj4": "^2.15.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-geojson": "^0.1.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.18.0",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
