--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "^52.0.21",
-    "expo-firebase-recaptcha": "^1.4.4",
     "expo-font": "~13.0.1",
     "expo-location": "~18.0.4",
     "expo-sqlite": "~15.0.3",
@@ -37,7 +36,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-geojson": "^0.1.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
