--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,10 +22,13 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "^52.0.21",
+    "expo-background-fetch": "~13.0.3",
+    "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.1",
     "expo-location": "~18.0.4",
     "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
+    "expo-task-manager": "~12.0.3",
     "expo-updates": "^0.26.10",
     "firebase": "^11.0.2",
     "install": "^0.13.0",
@@ -42,12 +45,16 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-threads": "^0.0.19",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "rn-workers": "^0.1.7",
+    "expo-asset": "~11.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2"
+    "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^15.1.3"
   },
   "private": true
 }
