--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "^52.0.21",
+    "expo-asset": "~11.0.1",
     "expo-background-fetch": "~13.0.3",
     "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.1",
@@ -49,8 +50,7 @@
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "rn-workers": "^0.1.7",
-    "expo-asset": "~11.0.1"
+    "rn-workers": "^0.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
