--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/database": "^21.6.1",
     "@react-native-firebase/dynamic-links": "^21.6.1",
     "@react-native-firebase/firestore": "^21.6.1",
     "@react-navigation/native": "^7.0.13",
@@ -33,6 +35,7 @@
     "expo-updates": "^0.26.10",
     "firebase": "^11.0.2",
     "install": "^0.13.0",
+    "lodash.debounce": "^4.0.8",
     "npx": "^3.0.0",
     "proj4": "^2.15.0",
     "react": "18.3.1",
@@ -43,10 +46,11 @@
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-threads": "^0.0.19",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
