--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.1",
     "expo-location": "~18.0.4",
-    "expo-sqlite": "~15.0.3",
+    "expo-speech": "~13.0.0",
+    "expo-sqlite": "~15.0.4",
     "expo-status-bar": "~2.0.0",
     "expo-task-manager": "~12.0.3",
     "expo-updates": "^0.26.10",
