--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-config": "^0.19.8",
+    "@expo/prebuild-config": "~8.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/database": "^21.6.1",
     "@react-native-firebase/dynamic-links": "^21.6.1",
@@ -23,18 +27,22 @@
     "@react-navigation/stack": "^7.0.18",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "expo": "^52.0.21",
+    "expo": "^52.0.23",
     "expo-asset": "~11.0.1",
     "expo-background-fetch": "~13.0.3",
     "expo-file-system": "~18.0.6",
-    "expo-font": "~13.0.1",
+    "expo-font": "~13.0.2",
     "expo-location": "~18.0.4",
+    "expo-modules-autolinking": "~2.0.0",
     "expo-speech": "~13.0.0",
     "expo-sqlite": "~15.0.4",
     "expo-status-bar": "~2.0.0",
     "expo-task-manager": "~12.0.3",
-    "expo-updates": "^0.26.10",
+    "expo-updates": "~0.26.10",
     "firebase": "^11.0.2",
+    "geofire-common": "^6.0.0",
+    "geofirestore": "^5.2.0",
+    "geofirestore-core": "^5.0.0",
     "install": "^0.13.0",
     "lodash.debounce": "^4.0.8",
     "npx": "^3.0.0",
@@ -42,15 +50,18 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-flash-message": "^0.4.2",
     "react-native-geojson": "^0.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-threads": "^0.0.19",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
@@ -59,6 +70,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/cli": "^0.22.7",
     "@react-native-community/cli": "^15.1.3"
   },
   "private": true
