--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-flash-message": "^0.4.2",
     "react-native-geojson": "^0.1.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
